# troop

./: .gitignore  Cargo.toml  README.md  troop.example.toml
.github/workflows/: build.yml
src/: commands.rs  config.rs  filter.rs  jobs.rs  main.rs  message.rs  smtp.rs  storage.rs
src/source/: imap.rs  mod.rs  pop3.rs  telegram.rs  webhook.rs
src/web/: handlers.rs  mod.rs  ui.rs
