[package]
name = "troop"
version = "0.1.0"
edition = "2021"
description = "Remote todo manager via email and other messaging platforms"

[[bin]]
name = "troop"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["form"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
imap = "2"
native-tls = "0.2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
mailparse = "0.14"
tower-http = { version = "0.5", features = ["trace"] }
urlencoding = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }

[dev-dependencies]
tempfile = "3"
